--- a/digit-recognition-logistic-regression.ipynb
+++ b/digit-recognition-logistic-regression.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "In this notebook, I'll build a neural network with PyTorch to classify handwritten digits. I'll use the MNIST datasett, which consists of 70000 grayscale images of handwritten digits, like the ones showed bellow.\n",
+    "In this notebook, I'll build a neural network with PyTorch to classify handwritten digits. I'll use the MNIST dataset, which consists of 70000 grayscale images of handwritten digits, like the ones showed bellow.\n",
     "\n",
     "![mnist](Figures/MnistExamples.png)"
    ]
